# langGraph-RAG

./: .gitignore  README.md  pyproject.toml  rag.py  utils.py
app_utils/: __init__.py  config.py  helpers.py
core/: llm_client.py  rag_workflow.py  retriever.py
docs/第一部分、基础篇：框架升级与核心技术/: 第01章：LangChain 1.x 生产级升级 - 从玩具框架到企业应用的蜕变.md  第02章：LangGraph 1.x 工作流编排 - 打造会思考的智能 Agent.md
docs/第二部分、实战篇：金融智能客服系统从零构建/: 第03章：项目初始化与环境搭建 - 基于 uv 的现代化 Python 工程实践.md  第04章：向量数据库搭建 - ChromaDB 知识库构建与文档处理.md  第05章：核心工具开发 - 从 API 封装到智能工具链.md  第06章：RAG工作流实现 - 打造会检索的智能客服 Agent.md  第07章：Streamlit Web界面开发 - 构建生产级对话系统.md  第08章：系统集成与优化 - 从单机到生产环境的完整部署.md
tests/: test_langchain_basic.py  test_langgraph_workflow.py  test_llm_api.py
tools/: naive_rag_tool.py
webui/: knowledge_base_page.py  rag_chat_page.py
参考教程/: LangChain 1.x 5分钟快速上手实战.md
金融银行知识库/: 01-银行客服知识库.md  02-银行信用卡知识库.md  03-金融反诈与安全防护知识库.md  04-个人贷款知识库.md  05-财富管理与理财知识库.md
